--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ brews = pristine-5.10
 brews = pristine-5.12
 brews = pristine-5.14
 brews = pristine-5.16
+brews = pristine-5.18
 [Prereqs]
 perl = 5.8.8
 [@Author::RHOELZ]
